--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <header class="header">
+
+                    <!--NavBar-->
+
+    <nav class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,7 +27,9 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </nav>
+
+
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -49,6 +54,7 @@
             </p>
         </div>
     </div>
+    
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
